<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_europa"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:paddingTop="50dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_title_hint" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:paddingTop="50dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_title_hint" />

    <Button
        android:id="@+id/button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="ENTER"/>

</LinearLayout>